# CPP-Docker_HW

./: readme.md
CLANG/: Dockerfile
CLANG/HW-03-CMake Leaver/: CMakeLists.txt  Leaver.cpp  Leaver.h
GCC/: Dockerfile
GCC/HW-03-CMake Leaver/: CMakeLists.txt  Leaver_Client.cpp  readme.md
HELLO/: Dockerfile  hello.cpp
